fix spacing, margin/padding
fixed margin & padding values

--- a/css/base/typography.sass
+++ b/css/base/typography.sass
@@ -1,4 +1,17 @@
 /*typography*/
+*
+	text-rendering: optimizeLegibility
+	text-rendering: geometricPrecision
+	font-smooth: always
+	
+	font-smoothing: antialiased
+	-moz-font-smoothing: antialiased
+	-webkit-font-smoothing: antialiased
+	-webkit-font-smoothing: subpixel-antialiased
+	
+	-webkit-font-smoothing: antialiased
+	-moz-osx-font-smoothing: grayscale
+	
 h1
 	font-family: "EB Garamond", Georgia, serif
 	color: $white
@@ -6,72 +19,41 @@ h1
 	line-height: 1.5
 	display: inline
 	
-	text-rendering: optimizeLegibility
-	text-rendering: geometricPrecision
-	font-smooth: always
-	
-	font-smoothing: antialiased
-	-moz-font-smoothing: antialiased
-	-webkit-font-smoothing: antialiased
-	-webkit-font-smoothing: subpixel-antialiased
-	
-	-webkit-font-smoothing: antialiased
-	-moz-osx-font-smoothing: grayscale
-	
 h4
 	font-family: "Montserrat", arial, sans-serif
 	color: $drk-gray
 	text-transform: uppercase
 	font-size: 0.875rem
-	display: inline
-	letter-spacing: 3px
-	text-rendering: optimizeLegibility
-	text-rendering: geometricPrecision
-	font-smooth: always
-	
-	font-smoothing: antialiased
-	-moz-font-smoothing: antialiased
-	-webkit-font-smoothing: antialiased
-	-webkit-font-smoothing: subpixel-antialiased
-	
-	-webkit-font-smoothing: antialiased
-	-moz-osx-font-smoothing: grayscale
+	display: inline-block
+	margin-bottom: 30px
+	letter-spacing: 2px
 
 .inset
 	height: 2px
 	width: 50px
 	background-color: $red
 	float: none
-	margin-top: 10px 
-.para
+	margin-top: 10px
+	margin-bottom: 40px
+.inset + p
 	padding-left: 0
 	margin-left: 0
+	margin-bottom: 40px
+article > .inset + p
+	margin-bottom: 0
   
 @media all and (min-width: 40em)
 	.inset
 		float: left
-	.para
+	.inset + p
 		margin-left: 50px
 		padding-left: 50px
-		
 
 p
 	font-family: "EB Garamond", Georgia, serif
 	color: $white
 	font-size: 1.050rem
 	line-height: 28px
-	
-	text-rendering: optimizeLegibility
-	text-rendering: geometricPrecision
-	font-smooth: always
-	
-	font-smoothing: antialiased
-	-moz-font-smoothing: antialiased
-	-webkit-font-smoothing: antialiased
-	-webkit-font-smoothing: subpixel-antialiased
-	
-	-webkit-font-smoothing: antialiased
-	-moz-osx-font-smoothing: grayscale
 	
 a.text__link
 	font-family: "EB Garamond", Georgia, serif
